LoadingButton custom view: -added custom attributes -added progress and circular animations to
added INTERNET uses permission
fixed method to map selected radio value
fixed layout
added monserrat fon
extended notification manager with function to send notification and cancel all previous notifications
added constants in dedicated file
added binding and binding adapter to detail activity views

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="default_text_size">20sp</dimen>
+    <dimen name="padding_md">16dp</dimen>
+
+    <dimen name="title">28sp</dimen>
+    <dimen name="body">18sp</dimen>
+    <dimen name="margin_md">16dp</dimen>
+    <dimen name="margin_lg">32dp</dimen>
+    <dimen name="subtitle">25sp</dimen>
+
 </resources>
