--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_layout"
@@ -9,43 +10,81 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <RadioGroup
-        android:id="@+id/radio_group"
+    <ImageView
+        android:id="@+id/github_image"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:padding="@dimen/padding_md"
+        android:background="#117986CB"
+        android:elevation="4dp"
+        app:srcCompat="@drawable/github_sign"
+        android:contentDescription="@string/github_logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+
+    <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/github_image"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <RadioButton
-            android:id="@+id/glide_option"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/glide_repo"
-            />
-        <RadioButton
-            android:id="@+id/project_option"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/project_repo"
-            />
-        <RadioButton
-            android:id="@+id/retrofit_option"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/retrofit_repo"
-            />
-    </RadioGroup>
+            android:padding="@dimen/padding_md"
+            android:layout_height="0dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
 
+                android:text="@string/download_your_repo"
+                style="@style/LoadApp.Title"
+                />
+            <RadioGroup
+                android:id="@+id/radio_group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_md"
+                >
+
+                <RadioButton
+                    android:id="@+id/glide_option"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/notification_title_glide"
+                    style="@style/LoadApp.RadioButton"
+                    />
+                <RadioButton
+                    android:id="@+id/project_option"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/notification_title"
+                    style="@style/LoadApp.RadioButton"
+                    />
+                <RadioButton
+                    android:id="@+id/retrofit_option"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/notification_title_retrofit"
+                    style="@style/LoadApp.RadioButton"
+                    />
+            </RadioGroup>
+
+        </LinearLayout>
+    </ScrollView>
     <com.udacity.LoadingButton
+        app:layout_constraintTop_toBottomOf="@+id/scroll_view"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/custom_button"
-        android:layout_width="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_margin="20dp"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
+        android:text="@string/download"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
